# AI-for-tile-matching-puzzle-game

./: CMakeLists.txt  README.md  config.h  dialog.cpp  dialog.h  game.cpp  game.h  gem.cpp  gem.h  main.cpp  resources.qrc  scene.cpp  scene.h  sounds.cpp  sounds.h
